# no_decorations_when_only

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: lib.rs  main.rs  utils.rs
