[package]
name = "no_decoration_when_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
single-instance = "0.3.3"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git", rev = "056d66a51a7ed3293d2006c27c0136da13ad109a" }
# hyprland = { src = "/hdd/dev/hyprland-rs" }
