[package]
name = "no_decoration_when_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
single-instance = "0.3.3"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git", rev = "5334cd237db771aad84a1bfdd3126487353d7528" }
# hyprland = { src = "/hdd/dev/hyprland-rs" }
